@@ -3,7 +3,7 @@ package model;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -12,6 +12,7 @@ import com.badlogic.gdx.math.Vector2;
 import com.badlogic.gdx.physics.box2d.Body;
 
 import io.github.jarethjaziel.abyssbattle.model.CombatManager;
+import io.github.jarethjaziel.abyssbattle.model.DamageReport;
 import io.github.jarethjaziel.abyssbattle.model.Player;
 import io.github.jarethjaziel.abyssbattle.model.Troop;
 import io.github.jarethjaziel.abyssbattle.util.GameState;
@@ -51,19 +52,19 @@ class CombatManagerTest {
         float radiusMeters = 2f;
         int maxDamage = 30;
 
-        boolean killed = cm.applyAreaDamage(explosion, radiusMeters, maxDamage, List.of(t1, t2, t3));
+        DamageReport report = cm.applyAreaDamage(explosion, radiusMeters, maxDamage, Arrays.asList(t1, t2, t3));
 
         assertTrue(t1.getHealth() < 30);
         assertTrue(t2.getHealth() < 30);
         assertEquals(100, t3.getHealth());
-        assertTrue(killed);
+        assertTrue(report.killOccurred());
     }
 
     @Test
     void applyAreaDamage_returnsFalseIfNoTroopDies() {
         Troop t = mockTroop(5, 5, 100);
-        boolean killed = cm.applyAreaDamage(new Vector2(0, 0), 1, 10, List.of(t));
-        assertFalse(killed);
+        DamageReport report = cm.applyAreaDamage(new Vector2(0, 0), 1, 10, Arrays.asList(t));
+        assertFalse(report.killOccurred());
     }
 
     @Test
@@ -94,7 +95,7 @@ class CombatManagerTest {
         Player p1 = mockPlayer(t1);
         Player p2 = mockPlayer(t2);
 
-        assertEquals(GameState.DRAW, cm.checkWinCondition(List.of(p1, p2), false));
+        assertEquals(GameState.DRAW, cm.checkWinCondition(Arrays.asList(p1, p2), false));
     }
 
     @Test
@@ -105,7 +106,7 @@ class CombatManagerTest {
         Player p1 = mockPlayer(deadP1);
         Player p2 = mockPlayer(aliveP2);
 
-        assertEquals(GameState.PLAYER_2_WIN, cm.checkWinCondition(List.of(p1, p2), false));
+        assertEquals(GameState.PLAYER_2_WIN, cm.checkWinCondition(Arrays.asList(p1, p2), false));
     }
 
     @Test
@@ -116,7 +117,7 @@ class CombatManagerTest {
         Player p1 = mockPlayer(aliveP1);
         Player p2 = mockPlayer(deadP2);
 
-        assertEquals(GameState.LAST_CHANCE, cm.checkWinCondition(List.of(p1, p2), false));
+        assertEquals(GameState.LAST_CHANCE, cm.checkWinCondition(Arrays.asList(p1, p2), false));
     }
 
     @Test
@@ -127,7 +128,7 @@ class CombatManagerTest {
         Player p1 = mockPlayer(aliveP1);
         Player p2 = mockPlayer(deadP2);
 
-        assertEquals(GameState.PLAYER_1_WIN, cm.checkWinCondition(List.of(p1, p2), true));
+        assertEquals(GameState.PLAYER_1_WIN, cm.checkWinCondition(Arrays.asList(p1, p2), true));
     }
 
     @Test
@@ -138,6 +139,6 @@ class CombatManagerTest {
         Player p1 = mockPlayer(alive1);
         Player p2 = mockPlayer(alive2);
 
-        assertNull(cm.checkWinCondition(List.of(p1, p2), false));
+        assertNull(cm.checkWinCondition(Arrays.asList(p1, p2), false));
     }
 }
